set up routes and pages

--- a/client/gneissblog/src/components/footer.css
+++ b/client/gneissblog/src/components/footer.css
@@ -11,6 +11,8 @@
   line-height: 18px;
   color: #595959;
   background-color: #faf2fc;
+  width: 100%;
+  justify-self: flex-end;
 }
 
 @media screen and (min-width: 1024px) {
